--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
+/* Diseño del LOGIN.PHP*/
+#body-login{
+    background: rgb(177, 174, 174);
+}
+
+#container-login{
+    background-image: radial-gradient(rgb(248, 248, 248), rgb(150, 150, 150));
+}
+
+
+/* Diseño del MAIN.HTML*/
+#body-main{
+    background-image: radial-gradient(rgb(248, 248, 248), rgb(150, 150, 150));
+}
+
+#row-card{
+    background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(203, 203, 203));
+}
+
+#card-body{
+    background-image: linear-gradient(to bottom, rgb(198, 198, 198), rgb(170, 170, 170));
+}
+
+#img-card{
+    height: 220px;
+}
+
+
+
+
+/* Diseño del INDEX.HTML*/
 #container_nav{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -18,21 +49,26 @@ main > .container{
 
 body{
     background: rgba(99, 191, 237, 0.692);
-    font-family:  Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #card{
-    background: rgba(214, 228, 85, 0.418);
-}
-
-#btn_cart{
-    background: rgba(1, 196, 1, 0.63);
+    background: rgba(230, 255, 252, 0.926);
 }
 
 #card-details{
-    background: rgba(214, 247, 255, 0.896);
+    background: rgba(238, 255, 255, 0.942);
 }
 
-#row-details{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+#data-general{
+    background: rgba(197, 232, 232, 0.859);
+}
+
+#data-pay{
+    background: rgba(197, 232, 232, 0.859);
+    display: none;
+}
+
+#cards{
+    width: 36px;
+    height: 30px;
 }
