--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 }
 
 #container-image{
-    background-image: url(/Project_Samava/image/clouda.png);
+    background-image: url(../Antares_project/image/clouda.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
